Add surefire profiles and cli option for bypassing the security manager deprecation